--- a/webpage.html
+++ b/webpage.html
@@ -10,6 +10,8 @@
     <p>I grew up in Brasília, Brazil</p>
     <p>Something no one would expect about me is that I don't have canine teeth </p>
     <p>My favorite place:</p>
-    <img src="img.jpg">
+    <img src="img.jpg"
+        width="400"
+        height="500">
 </body>
 </html>
