--- a/webpage.html
+++ b/webpage.html
@@ -2,13 +2,21 @@
 <html>
 <head>
     <title>Assignment 1: Get on the Web</title>
+    <style>
+        body {
+            font-family: "Courier New", monospace;
+        }
+        p {
+            color: blue; 
+        }
+    </style>
 </head>
 <body>
-    <p>My name is Marina</p>
-    <p>I am majoring in Engineering Psychology and Environmental Studies</p>
-    <p>My IP Address is 130.64.64.67 </p>
-    <p>I grew up in Brasília, Brazil</p>
-    <p>Something no one would expect about me is that I don't have canine teeth </p>
+    <p>Hi! My name is Marina. </p>
+    <p>I am majoring in Engineering Psychology and Environmental Studies.</p>
+    <p>My IP Address is 130.64.64.67.</p>
+    <p>I grew up in Brasília, the capital of Brazil.</p>
+    <p>Something no one would expect about me is that I don't have canine teeth.</p>
     <p>My favorite place:</p>
     <img src="riosunset.jpeg"
         width="400"
